--- a/section2/accounts/src/main/resources/application.yml
+++ b/section2/accounts/src/main/resources/application.yml
@@ -1,16 +1,14 @@
 #spring:
 #    application:
 #    name=accounts:
-
 server:
   port: 8080
-
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
     username: sa
     password: ''
-    driver-class-name: org.h2.Driver
   h2:
     console:
       enabled: true
